# advent-of-code-setup

./: .gitignore  day_01.py  pyproject.toml
config/: config.ini
src/utils/: build_md.py  new_file.py
tools/: api.py  settings.py
